--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,5 +7,5 @@
 </ion-header>
 
 <ion-content padding>
-
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem cum impedit nam exercitationem necessitatibus corporis a amet vitae iusto rerum, maxime omnis nisi eveniet repellat reprehenderit, doloremque unde accusamus repudiandae.</p>
 </ion-content>
