--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,6 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Feeds" tabIcon="paper"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Cartas" tabIcon="browsers"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Configurações" tabIcon="settings"></ion-tab>
 </ion-tabs>
