--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -14,6 +14,11 @@
 
 <ion-content padding>
   
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
+  
   <ion-card *ngFor="let filme of lista_filmes" >
     
     <ion-item>
@@ -50,7 +55,11 @@
         </ion-note>
       </ion-col>
     </ion-row>
-    
+    <button ion-button block (click)="abrirDetalhes(filme)">+ Detalhes</button>
   </ion-card>
+  
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
   
 </ion-content>
